Remove RSP Button

--- a/wedding-invitation.html
+++ b/wedding-invitation.html
@@ -70,9 +70,9 @@
                 <p class="wedding-date fade-in-up" style="animation-delay: 1.2s;">
                     June 15, 2025
                 </p>
-                <a href="#rsvp" class="cta-button fade-in-up" style="animation-delay: 1.5s;">
+                <!-- <a href="#rsvp" class="cta-button fade-in-up" style="animation-delay: 1.5s;">
                     RSVP Now
-                </a>
+                </a> -->
             </div>
         </div>
         <div class="scroll-indicator">
